added: check order status
